--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-mesto-auth",
   "version": "0.1.0",
-  "homepage": "https://violettaflower123.github.io/react-mesto-auth/",
+  "homepage": "http://instagramlike.project.nomoredomains.sbs/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "npm run build && scp -r ./build/* violetta-flower@62.84.116.180:/home/violetta-flower/mesto-frontend"
+    "deploy": "npm run build && scp -r ./build/* violetta-flower@84.201.130.27:/home/violetta-flower/react-mesto-api-full/frontend"
   },
   "eslintConfig": {
     "extends": [
